src/st/chimera/mips/assembler/MainParser.java
/* Generated By:JavaCC: Do not edit this line. MainParser.java */
package st.chimera.mips.assembler;

import java.io.*;

public class MainParser implements MainParserConstants {
        private Assembler assembler;
    public MainParser(Assembler assembler, Reader in) throws ParseException {
        this(in);
        this.assembler = assembler;
        Input();
    }

  final public void Input() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      Line();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(0);
  }

  final public void Line() throws ParseException {
          System.err.println("[DEBUG] enter Line()...");
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_3;
      }
      jj_consume_token(SPACE);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER_COLON:
      LineLabel();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_4;
        }
        jj_consume_token(SPACE);
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ROPCODE_RD_RT_SHAMT:
    case ROPCODE_RD_RT_RS:
    case ROPCODE_NONE:
    case ROPCODE_RD:
    case ROPCODE_RS:
    case ROPCODE_RS_RT:
    case ROPCODE_RD_RS_RT:
    case IOPCODE_RS_RT_LABEL:
    case IOPCODE_RS_LABEL:
    case IOPCODE_RT_RS_IMM:
    case IOPCODE_RT_IMM:
    case IOPCODE_RT_ADDR:
    case JOPCODE:
      Instruction();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_5;
        }
        jj_consume_token(SPACE);
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(EOL);
      System.err.println("[DEBUG] end of Line()");
  }

  final public void LineLabel() throws ParseException {
  Token label;
    label = jj_consume_token(IDENTIFIER_COLON);
          assembler.putLabel(label.image.substring(0, label.image.length()-1));
  }

  final public void Instruction() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ROPCODE_RD_RT_SHAMT:
      RInstruction_DTSH();
      break;
    case ROPCODE_RD_RT_RS:
      RInstruction_DTS();
      break;
    case ROPCODE_RS:
      RInstruction_S();
      break;
    case ROPCODE_RD:
      RInstruction_D();
      break;
    case ROPCODE_RS_RT:
      RInstruction_ST();
      break;
    case ROPCODE_RD_RS_RT:
      RInstruction_DST();
      break;
    case ROPCODE_NONE:
      RInstruction_N();
      break;
    case IOPCODE_RS_RT_LABEL:
      IInstruction_STL();
      break;
    case IOPCODE_RS_LABEL:
      IInstruction_SL();
      break;
    case IOPCODE_RT_RS_IMM:
      IInstruction_TSI();
      break;
    case IOPCODE_RT_IMM:
      IInstruction_TI();
      break;
    case IOPCODE_RT_ADDR:
      IInstruction_TA();
      break;
    case JOPCODE:
      JInstruction();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void RInstruction_DTSH() throws ParseException {
  Token op; int rd, rt, shamt;
    op = jj_consume_token(ROPCODE_RD_RT_SHAMT);
    label_6:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
    }
    rd = Register();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_7;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_8;
      }
      jj_consume_token(SPACE);
    }
    rt = Register();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_9;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_10;
      }
      jj_consume_token(SPACE);
    }
    shamt = Immediate();
        assembler.putRInstruction(op.image, 0, rt, rd, shamt);
                assembler.putInstructionString(op.image + " " + rd + ", " + rt);
  }

  final public void RInstruction_DTS() throws ParseException {
  Token op; int rd, rt, rs;
    op = jj_consume_token(ROPCODE_RD_RT_RS);
    label_11:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_11;
      }
    }
    rd = Register();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_12;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_13;
      }
      jj_consume_token(SPACE);
    }
    rt = Register();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_14;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_15;
      }
      jj_consume_token(SPACE);
    }
    rs = Register();
        assembler.putRInstruction(op.image, rs, rt, rd, 0);
                assembler.putInstructionString(op.image + " " + rd + ", " + rt + ", " + rs);
  }

  final public void RInstruction_S() throws ParseException {
  Token op; int rs;
    op = jj_consume_token(ROPCODE_RS);
    label_16:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_16;
      }
    }
    rs = Register();
                assembler.putRInstruction(op.image, rs, 0, 0, 0);
                assembler.putInstructionString(op.image + " " + rs);
  }

  final public void RInstruction_D() throws ParseException {
  Token op; int rd;
    op = jj_consume_token(ROPCODE_RD);
    label_17:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_17;
      }
    }
    rd = Register();
        assembler.putRInstruction(op.image, 0, 0, rd, 0);
                assembler.putInstructionString(op.image + " " + rd);
  }

  final public void RInstruction_ST() throws ParseException {
  Token op; int rs, rt;
    op = jj_consume_token(ROPCODE_RS_RT);
    label_18:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_18;
      }
    }
    rs = Register();
    label_19:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_19;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_20:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_20;
      }
      jj_consume_token(SPACE);
    }
    rt = Register();
        assembler.putRInstruction(op.image, rs, rt, 0, 0);
                assembler.putInstructionString(op.image + " " + rs + ", " + rt);
  }

  final public void RInstruction_DST() throws ParseException {
  Token op; int rd, rs, rt;
    op = jj_consume_token(ROPCODE_RD_RS_RT);
    label_21:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_21;
      }
    }
    rd = Register();
    label_22:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_22;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_23:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_23;
      }
      jj_consume_token(SPACE);
    }
    rs = Register();
    label_24:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_24;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_25:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_25;
      }
      jj_consume_token(SPACE);
    }
    rt = Register();
        assembler.putRInstruction(op.image, rs, rt, rd, 0);
                assembler.putInstructionString(op.image + " " + rd + ", " + rs + ", " + rt);
  }

  final public void RInstruction_N() throws ParseException {
  Token op;
    op = jj_consume_token(ROPCODE_NONE);
                assembler.putRInstruction(op.image, 0, 0, 0, 0);
                assembler.putInstructionString(op.image);
  }

  final public void IInstruction_STL() throws ParseException {
  Token op; int rs, rt, label;
    op = jj_consume_token(IOPCODE_RS_RT_LABEL);
    label_26:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_26;
      }
    }
    rs = Register();
    label_27:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_27;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_28:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[29] = jj_gen;
        break label_28;
      }
      jj_consume_token(SPACE);
    }
    rt = Register();
    label_29:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_29;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_30:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[31] = jj_gen;
        break label_30;
      }
      jj_consume_token(SPACE);
    }
    label = Label();
                assembler.putIInstruction(op.image, rs, rt, label);
                assembler.putInstructionString(op.image + " " + rs + ", " + rt);
  }

  final public void IInstruction_SL() throws ParseException {
  Token op; int rs, label;
    op = jj_consume_token(IOPCODE_RS_LABEL);
    label_31:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[32] = jj_gen;
        break label_31;
      }
    }
    rs = Register();
    label_32:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_32;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_33:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[34] = jj_gen;
        break label_33;
      }
      jj_consume_token(SPACE);
    }
    label = Label();
                assembler.putIInstruction(op.image, rs, 0, label);
                assembler.putInstructionString(op.image + " " + rs + ", " + label);
  }

  final public void IInstruction_TSI() throws ParseException {
  Token op; int rt, rs, imm;
    op = jj_consume_token(IOPCODE_RT_RS_IMM);
    label_34:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[35] = jj_gen;
        break label_34;
      }
    }
    rt = Register();
    label_35:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[36] = jj_gen;
        break label_35;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_36:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[37] = jj_gen;
        break label_36;
      }
      jj_consume_token(SPACE);
    }
    rs = Register();
    label_37:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[38] = jj_gen;
        break label_37;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_38:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[39] = jj_gen;
        break label_38;
      }
      jj_consume_token(SPACE);
    }
    imm = Immediate();
                assembler.putIInstruction(op.image, rs, rt, imm);
                assembler.putInstructionString(op.image + " " + rt + ", " + rs + ", " + imm);
  }

  final public void IInstruction_TI() throws ParseException {
  Token op; int rt, imm;
    op = jj_consume_token(IOPCODE_RT_IMM);
    label_39:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[40] = jj_gen;
        break label_39;
      }
    }
    rt = Register();
    label_40:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[41] = jj_gen;
        break label_40;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_41:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[42] = jj_gen;
        break label_41;
      }
      jj_consume_token(SPACE);
    }
    imm = Immediate();
                assembler.putIInstruction(op.image, 0, rt, imm);
                assembler.putInstructionString(op.image + " " + rt + ", " + imm);
  }

  final public void IInstruction_TA() throws ParseException {
  Token op; int rt, address;
    op = jj_consume_token(IOPCODE_RT_ADDR);
    label_42:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[43] = jj_gen;
        break label_42;
      }
    }
    rt = Register();
    label_43:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[44] = jj_gen;
        break label_43;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(34);
    label_44:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[45] = jj_gen;
        break label_44;
      }
      jj_consume_token(SPACE);
    }
    address = Address();
                assembler.putIInstruction(op.image, address >>> 21 , rt, address & 0xfffff);
                assembler.putInstructionString(op.image + " " + rt + ", " + (address & 0xfffff));
  }

  final public void JInstruction() throws ParseException {
  Token op; int target;
    op = jj_consume_token(JOPCODE);
    label_45:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[46] = jj_gen;
        break label_45;
      }
    }
    target = Target();
                assembler.putJInstruction(op.image, target);
                assembler.putInstructionString(op.image + " " + target);
  }

  final public int Immediate() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DECIMAL:
      t = jj_consume_token(DECIMAL);
                    {if (true) return Integer.parseInt(t.image);}
      break;
    case HEXADECIMAL:
      t = jj_consume_token(HEXADECIMAL);
                        {if (true) return Integer.parseInt(t.image.substring(2), 16);}
      break;
    default:
      jj_la1[47] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public int Register() throws ParseException {
  Token t;
    t = jj_consume_token(REGISTER);
      {if (true) return Assembler.getRegisterNumber(t.image.substring(1));}
    throw new Error("Missing return statement in function");
  }

  final public int Label() throws ParseException {
  Token label;
    label = jj_consume_token(IDENTIFIER);
          {if (true) return assembler.getLabelRelativeAddress(label.image) >> 2;}
    throw new Error("Missing return statement in function");
  }

  final public int Address() throws ParseException {
  int label, imm, reg = 0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      label = Label();
                          {if (true) return label;}
      break;
    case DECIMAL:
    case HEXADECIMAL:
      imm = Immediate();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 35:
        jj_consume_token(35);
        reg = Register();
        jj_consume_token(36);
        break;
      default:
        jj_la1[48] = jj_gen;
        ;
      }
          {if (true) return Assembler.createInstruction(0, reg, 0, imm);}
      break;
    default:
      jj_la1[49] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public int Target() throws ParseException {
  Token target;
    target = jj_consume_token(IDENTIFIER);
          {if (true) return assembler.getLabelAbsoluteAddress(target.image) >> 2;}
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_1();
    jj_save(0, xla);
    return retval;
  }

  final private boolean jj_3R_85() {
    if (jj_scan_token(SPACE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_48() {
    if (jj_3R_50()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_51()) { jj_scanpos = xsp; break; }
      if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    }
    return false;
  }

  final private boolean jj_3R_50() {
    if (jj_scan_token(IDENTIFIER_COLON)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_73() {
    if (jj_scan_token(ROPCODE_NONE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_46() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_47()) { jj_scanpos = xsp; break; }
      if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    }
    xsp = jj_scanpos;
    if (jj_3R_48()) jj_scanpos = xsp;
    else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    xsp = jj_scanpos;
    if (jj_3R_49()) jj_scanpos = xsp;
    else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_scan_token(EOL)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_47() {
    if (jj_scan_token(SPACE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_91() {
    if (jj_scan_token(SPACE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_84() {
    if (jj_scan_token(SPACE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_90() {
    if (jj_scan_token(SPACE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_1() {
    if (jj_3R_46()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

